showing youtubeplayer on mobile to fix nonplaying error

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1219,7 +1219,7 @@ nav ul li:hover, nav ul li.active {
     }
 
     #player{
-      display:none;
+      /*display:none;*/
     }
 
     .hide-on-small-only{
